Coffee moments: Fix container is not centered

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -1,5 +1,4 @@
 .container-section {
-  margin: 0;
   padding: 64px 16px;
   min-width: 320px;
   text-align: center;
